generator client {
  provider        = "prisma-client-js"
  previewFeatures = ["driverAdapters"]
}

datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

model User {
  id                String             @id @default(cuid())
  email             String             @unique
  password          String
  name              String
  role              String             @default("user")
  workspace         Workspace?
  authoredModules   ModuleDefinition[]
  createdAt         DateTime           @default(now())
}

model Workspace {
  id               String             @id @default(cuid())
  name             String
  slug             String             @unique
  userId           String             @unique
  user             User               @relation(fields: [userId], references: [id])
  tables           Table[]
  pages            Page[]
  installedPacks   InstalledPack[]
  installedPlugins InstalledPlugin[]
  tenantUsers      TenantUser[]
  modules          ModuleDefinition[]
  globalSearchIndices GlobalSearchIndex[]
  settings         Json               @default("{}")
  createdAt        DateTime           @default(now())
}

// Developer-authored module definitions — the DB counterpart of registry.ts.
// When a dev designs pages/tables in the GUI and publishes them, the result
// lands here as a full PackDefinition-shaped JSON that the install/update
// APIs can read exactly like they read built-in packs from registry.ts.
model ModuleDefinition {
  id          String    @id @default(cuid())
  packId      String    @unique  // matches PackDefinition.id, e.g. "my-crm"
  name        String
  description String    @default("")
  icon        String    @default("package")
  category    String    @default("Custom")
  version     String    @default("0.1.0")
  tables      Json      @default("[]")  // PackTableDefinition[]
  pages       Json      @default("[]")  // PackPageDefinition[]
  published   Boolean   @default(false) // only published modules appear in marketplace
  authorId    String
  author      User      @relation(fields: [authorId], references: [id], onDelete: Cascade)
  workspaceId String
  workspace   Workspace @relation(fields: [workspaceId], references: [id], onDelete: Cascade)
  createdAt   DateTime  @default(now())
  updatedAt   DateTime  @updatedAt
}

// Materialized copy of a pack table — tagged with packSource/packTableKey for provenance.
// Source of truth is the canonical PackDefinition in registry.ts, not these rows.
model Table {
  id           String    @id @default(cuid())
  name         String
  icon         String?
  workspaceId  String
  workspace    Workspace @relation(fields: [workspaceId], references: [id], onDelete: Cascade)
  fields       Field[]
  records      Record[]
  packSource   String?   // e.g. "inventory" — which pack created this table
  packTableKey String?   // e.g. "Products" — canonical key in the pack definition
  isCustom     Boolean   @default(false) // true = user-created table, not from any pack
  createdAt    DateTime  @default(now())
}

// Materialized copy of a pack field — tagged for provenance.
model Field {
  id           String    @id @default(cuid())
  name         String
  type         FieldType
  config       Json      @default("{}")
  required     Boolean   @default(false)
  order        Int
  tableId      String
  table        Table     @relation(fields: [tableId], references: [id], onDelete: Cascade)
  packFieldKey String?   // e.g. "Product Name" — canonical key in the pack definition
  isCustom     Boolean   @default(false) // true = user added this field to a pack table
  isHidden     Boolean   @default(false) // true = user hid this field without deleting it
}

enum FieldType {
  TEXT
  NUMBER
  DATE
  SINGLE_SELECT
  MULTI_SELECT
  CHECKBOX
  RELATION
  TIME
  EMAIL
  PHONE
  CURRENCY
}

model Record {
  id        String   @id @default(cuid())
  data      Json
  tableId   String
  table     Table    @relation(fields: [tableId], references: [id], onDelete: Cascade)
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt
}

model Page {
  id          String    @id @default(cuid())
  title       String
  icon        String?
  blocks      Json
  workspaceId String
  workspace   Workspace @relation(fields: [workspaceId], references: [id], onDelete: Cascade)
  packSource  String?
  packPageKey String?   // canonical key from pack definition — never changes even if user renames
  order       Int       @default(0)
  createdAt   DateTime  @default(now())
}

// Tracks every installed module pack and its version.
// customizations stores only the user's DELTA on top of the canonical pack — not the full schema.
model InstalledPack {
  id             String                    @id @default(cuid())
  packId         String
  packVersion    String                    @default("1.0.0")
  workspaceId    String
  workspace      Workspace                 @relation(fields: [workspaceId], references: [id], onDelete: Cascade)
  customizations WorkspaceSchemaOverride[]
  installedAt    DateTime                  @default(now())

  @@unique([packId, workspaceId])
}

// Stores ONLY the user's changes on top of a canonical pack definition.
// The runtime merges canonical + these overrides to produce the effective schema.
// Never modify a PackDefinition in registry.ts — record the change here instead.
model WorkspaceSchemaOverride {
  id              String        @id @default(cuid())
  installedPackId String
  installedPack   InstalledPack @relation(fields: [installedPackId], references: [id], onDelete: Cascade)
  overrideType    OverrideType
  targetKey       String
  payload         Json
  createdAt       DateTime      @default(now())
}

// What kinds of changes a workspace can make on top of a canonical pack schema
enum OverrideType {
  ADD_FIELD
  RENAME_FIELD
  HIDE_FIELD
  CHANGE_FIELD_OPTIONS
  ADD_TABLE
  RENAME_TABLE
}

model InstalledPlugin {
  id          String    @id @default(cuid())
  pluginId    String
  config      Json      @default("{}")
  enabled     Boolean   @default(true)
  workspaceId String
  workspace   Workspace @relation(fields: [workspaceId], references: [id], onDelete: Cascade)
  installedAt DateTime  @default(now())

  @@unique([pluginId, workspaceId])
}

model TenantUser {
  id          String    @id @default(cuid())
  workspaceId String
  workspace   Workspace @relation(fields: [workspaceId], references: [id], onDelete: Cascade)
  username    String
  password    String    // Hashed
  role        String    @default("admin")
  createdAt   DateTime  @default(now())

  @@unique([workspaceId, username])
}

model EmployeeToken {
  id         String   @id @default(cuid())
  employeeId String   @unique // References the generic Record ID for the employee
  token      String   @unique
  createdAt  DateTime @default(now())
  updatedAt  DateTime @updatedAt
}

model AttendanceRecord {
  id               String    @id @default(cuid())
  employeeId       String    // References the generic Record ID for the employee
  date             DateTime  @db.Date
  checkInTime      DateTime?
  checkOutTime     DateTime?
  checkInLat       Float?
  checkInLng       Float?
  checkOutLat      Float?
  checkOutLng      Float?
  durationMinutes  Int?
  status           String    @default("Working") // "Working", "Completed", "Absent"
  remark           String?
  createdAt        DateTime  @default(now())
  updatedAt        DateTime  @updatedAt

  @@unique([employeeId, date])
}

model GlobalSearchIndex {
  id          String   @id @default(cuid())
  title       String
  type        String   // "page", "table", "record", "module", "custom"
  url         String
  keywords    String   // comma-separated or space-separated keywords for fuzzy matching
  category    String   @default("General")
  workspaceId String
  workspace   Workspace @relation(fields: [workspaceId], references: [id], onDelete: Cascade)
  createdAt   DateTime @default(now())
  updatedAt   DateTime @updatedAt

  @@index([workspaceId])
}

model Quotation {
  id          String   @id @default(cuid())
  publicId    String   @unique @default(uuid())
  quotationNo String
  date        DateTime @default(now())
  clientName  String?
  totalAmount Int?
  status      String   @default("pending") // pass, failed, pending, Active, Converted, Lost
  data        Json
  createdAt   DateTime @default(now())
}

model Estimate {
  id          String   @id @default(cuid())
  publicId    String   @unique @default(uuid())
  billNo      String
  billDate    DateTime @default(now())
  clientName  String?
  totalAmount Int?
  paidAmount  Int      @default(0)
  status      String   @default("pending")
  data        Json
  createdAt   DateTime @default(now())
}

model SystemSetting {
  id    String @id @default("global")
  data  Json   @default("{}")
}

model AuditLog {
  id         String   @id @default(cuid())
  action     String
  actorId    String?
  actorEmail String?
  targetId   String?
  details    Json?
  createdAt  DateTime @default(now())
}
